--- a/posts/intrpl_s_change_app.qmd
+++ b/posts/intrpl_s_change_app.qmd
@@ -12,6 +12,10 @@ categories:
 
 **App link: [*gmidolo.shinyapps.io/interpolated_s_change_app*](https://gmidolo.shinyapps.io/interpolated_s_change_app/)**
 
+<a href="https://gmidolo.shinyapps.io/interpolated_s_change_app/" target="_blank">
+  <img src="https://raw.githubusercontent.com/gmidolo/interpolated_S_change_app/main/screenshot.app.png" width="100%" />
+</a>
+
 We interpolated spatiotemporal changes in vascular plant species richness between 1960 and 2020 using Random Forests. Training and predictions are obtained over 660,748 European vegetation plots available on the <a href='https://euroveg.org/eva-database/' target='_blank'>European Vegetation Archive</a> (<a href='https://doi.org/10.1111/avsc.12519' target='_blank'>Chytrý et al. 2020</a>) and <a href='https://euroveg.org/resurvey/' target='_blank'>ReSurveyEurope</a> (<a href='https://doi.org/10.1111/jvs.13235' target='_blank'>Knollová et al. 2024</a>).
 
 Predictions of species richness from individual plots were aggregated onto a 10 km × 10 km grid. On the map, point size represents the number of plots within each grid cell. Areas with denser sampling in space and time are more likely to show more accurate trends.
@@ -20,6 +24,6 @@ Predictions of species richness from individual plots were aggregated onto a 10 
 
 **App code **<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="15" style="vertical-align: middle; margin-right: 3px;"/>: [gmidolo/interpolated_S_change_app](https://github.com/gmidolo/interpolated_S_change_app)
 
-<iframe src="https://gmidolo.shinyapps.io/interpolated_s_change_app/" width="100%" height="700px" style="border:none;">
+<!-- <iframe src="https://gmidolo.shinyapps.io/interpolated_s_change_app/" width="100%" height="700px" style="border:none;"> -->
 
-</iframe>
+<!-- </iframe> -->
