--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,18 @@
 ---
-title: |
-  <div style="display: flex; align-items: center; justify-content: center;">
-    <img src="./imgs/profilepic.jpg" style="border-radius: 50%; width:170px; height:170px; object-fit: cover; margin-right: 15px;">
-    <span style="font-size: 1.3em;">Gabriele Midolo</span>
-  </div>
+title: "Gabriele Midolo"
 format: html
 ---
+
+<style>
+  .title {
+    display: none;
+  }
+</style>
+
+<div style="display: flex; align-items: center; justify-content: center;">
+  <img src="./imgs/profilepic.jpg" style="border-radius: 50%; width:170px; height:170px; object-fit: cover; margin-right: 15px;">
+  <span style="font-size: 2.5em; font-weight: 600;">Gabriele Midolo</span>
+</div>
 
 Welcome - and thanks for visiting!
 
@@ -15,5 +22,3 @@ My current work as researcher investigates the temporal and spatial organization
 
 ![*Plebejus* (*Plebejus*) *argus* (Linnaeus, 1758) - Lycaenidae Polyommatinae Polyommatini\
 Drawing by G. Midolo](imgs/butvec.svg){style="text-align: center;" fig-align="center" width="191"}
-
-\
