--- a/posts/intrpl_s_change_app.qmd
+++ b/posts/intrpl_s_change_app.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Mapping six decades of vascular plant species richness change across Europe"
 description: "R Shiny dashboard mapping species richness dynamics"
+image: "https://raw.githubusercontent.com/gmidolo/interpolated_S_change_app/main/screenshot.app.png"
 date: "2025-07-21"
 publishDate: "2025-07-25"
 categories:
@@ -10,20 +11,19 @@ categories:
   - ShinyApp
 ---
 
-**App link: [*gmidolo.shinyapps.io/interpolated_s_change_app*](https://gmidolo.shinyapps.io/interpolated_s_change_app/)**
+App link: *[gmidolo.shinyapps.io/interpolated_s_change_app](https://gmidolo.shinyapps.io/interpolated_s_change_app/)*
 
-<a href="https://gmidolo.shinyapps.io/interpolated_s_change_app/" target="_blank">
-  <img src="https://raw.githubusercontent.com/gmidolo/interpolated_S_change_app/main/screenshot.app.png" width="100%" />
-</a>
+<a href="https://gmidolo.shinyapps.io/interpolated_s_change_app/" target="_blank">  <img src="https://raw.githubusercontent.com/gmidolo/interpolated_S_change_app/main/screenshot.app.png" width="100%" /></a> 
 
 We interpolated spatiotemporal changes in vascular plant species richness between 1960 and 2020 using Random Forests. Training and predictions are obtained over 660,748 European vegetation plots available on the <a href='https://euroveg.org/eva-database/' target='_blank'>European Vegetation Archive</a> (<a href='https://doi.org/10.1111/avsc.12519' target='_blank'>Chytrý et al. 2020</a>) and <a href='https://euroveg.org/resurvey/' target='_blank'>ReSurveyEurope</a> (<a href='https://doi.org/10.1111/jvs.13235' target='_blank'>Knollová et al. 2024</a>).
 
 Predictions of species richness from individual plots were aggregated onto a 10 km × 10 km grid. On the map, point size represents the number of plots within each grid cell. Areas with denser sampling in space and time are more likely to show more accurate trends.
 
-**Preprint paper**: Midolo et al. (2025) *Six decades of losses and gains in alpha diversity of European plant communities* EcoEvoRxiv [https://doi.org/10.32942/X2164H](https://doi.org/10.32942/X2164H)
+This application uses original data and code deposited at:<br>
+                 - <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="15" style="vertical-align: middle; margin-right: 3px;"/> <a href="https://github.com/gmidolo/interpolated_S_change" target="_blank">github.com/gmidolo/interpolated_S_change</a><br>
+                 - <img src="https://about.zenodo.org/static/img/icons/zenodo-icon-black.svg" width="15" style="vertical-align: middle; margin-right: 3px;"/> <a href="https://doi.org/10.5281/zenodo.15836616" target="_blank">10.5281/zenodo.15836616</a>
 
-**App code **<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="15" style="vertical-align: middle; margin-right: 3px;"/>: [gmidolo/interpolated_S_change_app](https://github.com/gmidolo/interpolated_S_change_app)
+Preprint paper: [Midolo et al., 2025](https://doi.org/10.32942/X2164H)<br>
+Code: [gmidolo/interpolated_S_change_app](https://github.com/gmidolo/interpolated_S_change_app)
 
-<!-- <iframe src="https://gmidolo.shinyapps.io/interpolated_s_change_app/" width="100%" height="700px" style="border:none;"> -->
-
-<!-- </iframe> -->
+<!-- <iframe src="https://gmidolo.shinyapps.io/interpolated_s_change_app/" width="100%" height="700px" style="border:none;"></iframe> -->
